--- a/package.json
+++ b/package.json
@@ -32,7 +32,10 @@
     "@payloadcms/richtext-lexical": "3.33.0",
     "@payloadcms/ui": "3.33.0",
     "@radix-ui/react-checkbox": "^1.0.4",
+    "@radix-ui/react-dialog": "^1.1.11",
+    "@radix-ui/react-dropdown-menu": "^2.1.12",
     "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-scroll-area": "^1.2.6",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.2.0",
     "class-variance-authority": "^0.7.0",
