--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "graphql": "^16.8.2",
     "lucide-react": "^0.378.0",
     "next": "15.3.0",
+    "next-intl": "^4.1.0",
     "next-sitemap": "^4.2.3",
     "payload": "3.33.0",
     "prism-react-renderer": "^2.3.1",
