--- a/package.json
+++ b/package.json
@@ -40,12 +40,14 @@
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-separator": "^1.1.4",
     "@radix-ui/react-slot": "^1.2.0",
+    "@types/lodash": "^4.17.17",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cross-env": "^7.0.3",
     "embla-carousel-react": "^8.6.0",
     "geist": "^1.3.0",
     "graphql": "^16.8.2",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.378.0",
     "next": "15.3.0",
     "next-intl": "^4.1.0",
