--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "clsx": "^2.1.1",
     "cross-env": "^7.0.3",
     "embla-carousel-react": "^8.6.0",
+    "framer-motion": "^12.12.2",
     "geist": "^1.3.0",
     "graphql": "^16.8.2",
     "lodash": "^4.17.21",
