Update project metadata, enhance mobile menu, and improve pagination
- Updated package.json to set project name and description for better clarity.
- Enhanced mobile menu functionality with improved accessibility and user experience.
- Integrated pagination component into news pages for better navigation.
- Refactored ArticlesGrid component to conditionally display filters based on props.
- Cleaned up unused imports and adjusted component structures for maintainability.

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "",
+  "name": "vup-website",
   "version": "1.0.0",
-  "description": "Website template for Payload",
+  "description": "VUP Website",
   "license": "MIT",
   "type": "module",
   "scripts": {
