Updated config and env

--- a/.env.local
+++ b/.env.local
@@ -1,6 +1,8 @@
 # Database connection string
 DATABASE_URI=postgresql://postgres:whQant8N-Zfi6NPRm77q@db.elnpbywhaolyzgvwyuqf.supabase.co:5432/postgres
 
+# IPV4_DATABASE_URI=postgresql://postgres.elnpbywhaolyzgvwyuqf:whQant8N-Zfi6NPRm77q@aws-0-us-east-2.pooler.supabase.com:6543/postgres
+
 # Or use a PG connection string
 #DATABASE_URI=postgresql://127.0.0.1:5432/your-database-name
 
