Implement Timeline block with new features and update environment configuration
- Added TimelineBlock interface to payload-types.ts for timeline data structure.
- Integrated Timeline component into RenderBlocks and configured it in Pages collection.
- Enhanced Timeline component to display key achievements and utilize RichText for content.
- Updated .env.local to include staging database URI and commented out production URI for clarity.
- Added OrderedListFeature to Timeline block configuration for improved text formatting options.

--- a/.env.local
+++ b/.env.local
@@ -1,5 +1,9 @@
 # Database connection string
-DATABASE_URI=postgresql://postgres.elnpbywhaolyzgvwyuqf:whQant8N-Zfi6NPRm77q@aws-0-us-east-2.pooler.supabase.com:6543/postgres
+# PRODUCTION_DATABASE_URI=postgresql://postgres.elnpbywhaolyzgvwyuqf:whQant8N-Zfi6NPRm77q@aws-0-us-east-2.pooler.supabase.com:6543/postgres
+# STAGING_DATABASE_URI=postgres://postgres:EKQ8mwz4wdt7tnh-acn@db.ludwreuxuzoyeevqvihu.supabase.co:6543/postgres
+
+# STAGING
+DATABASE_URI=postgresql://postgres.ludwreuxuzoyeevqvihu:EKQ8mwz4wdt7tnh-acn@aws-0-eu-central-1.pooler.supabase.com:5432/postgres
 
 # IPV4_DATABASE_URI=postgresql://postgres.elnpbywhaolyzgvwyuqf:whQant8N-Zfi6NPRm77q@aws-0-us-east-2.pooler.supabase.com:6543/postgres
 
