--- a/.env.local
+++ b/.env.local
@@ -3,10 +3,10 @@
 # STAGING_DATABASE_URI=postgres://postgres:EKQ8mwz4wdt7tnh-acn@db.ludwreuxuzoyeevqvihu.supabase.co:6543/postgres
 
 # STAGING SUPABASE
-# DATABASE_URI=postgresql://postgres.ludwreuxuzoyeevqvihu:EKQ8mwz4wdt7tnh-acn@aws-0-eu-central-1.pooler.supabase.com:5432/postgres
+DATABASE_URI=postgresql://postgres.ludwreuxuzoyeevqvihu:EKQ8mwz4wdt7tnh-acn@aws-0-eu-central-1.pooler.supabase.com:5432/postgres
 
 # MYSQL LOCAL FILE
-DATABASE_URI=file:./.db
+# DATABASE_URI=file:./.db
 
 # IPV4_DATABASE_URI=postgresql://postgres.elnpbywhaolyzgvwyuqf:whQant8N-Zfi6NPRm77q@aws-0-us-east-2.pooler.supabase.com:6543/postgres
 
