--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,8 @@ node_modules
 .next
 .vercel
 
+.gitignore
+
 # Payload default media upload directory
 public/media/
 
@@ -19,3 +21,7 @@ public/sitemap*.xml
 .env.local
 .env.production
 ACTUAL.env.production
+
+
+#instructions
+instructions/
