--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@payloadcms/plugin-seo": "^3.43.0",
     "@payloadcms/richtext-lexical": "^3.43.0",
     "@payloadcms/storage-s3": "^3.43.0",
+    "@payloadcms/translations": "^3.48.0",
     "@payloadcms/ui": "^3.43.0",
     "@radix-ui/react-accordion": "^1.2.8",
     "@radix-ui/react-checkbox": "^1.0.4",
