--- a/package.json
+++ b/package.json
@@ -19,21 +19,21 @@
     "start": "cross-env NODE_OPTIONS=--no-deprecation next start"
   },
   "dependencies": {
-    "@payloadcms/admin-bar": "^3.43.0",
-    "@payloadcms/db-postgres": "^3.43.0",
-    "@payloadcms/db-sqlite": "^3.43.0",
-    "@payloadcms/live-preview-react": "^3.43.0",
-    "@payloadcms/next": "^3.43.0",
-    "@payloadcms/payload-cloud": "^3.43.0",
-    "@payloadcms/plugin-form-builder": "^3.43.0",
-    "@payloadcms/plugin-nested-docs": "^3.43.0",
-    "@payloadcms/plugin-redirects": "^3.43.0",
-    "@payloadcms/plugin-search": "^3.43.0",
-    "@payloadcms/plugin-seo": "^3.43.0",
-    "@payloadcms/richtext-lexical": "^3.43.0",
-    "@payloadcms/storage-s3": "^3.43.0",
+    "@payloadcms/admin-bar": "^3.48.0",
+    "@payloadcms/db-postgres": "^3.48.0",
+    "@payloadcms/db-sqlite": "^3.48.0",
+    "@payloadcms/live-preview-react": "^3.48.0",
+    "@payloadcms/next": "^3.48.0",
+    "@payloadcms/payload-cloud": "^3.48.0",
+    "@payloadcms/plugin-form-builder": "^3.48.0",
+    "@payloadcms/plugin-nested-docs": "^3.48.0",
+    "@payloadcms/plugin-redirects": "^3.48.0",
+    "@payloadcms/plugin-search": "^3.48.0",
+    "@payloadcms/plugin-seo": "^3.48.0",
+    "@payloadcms/richtext-lexical": "^3.48.0",
+    "@payloadcms/storage-s3": "^3.48.0",
     "@payloadcms/translations": "^3.48.0",
-    "@payloadcms/ui": "^3.43.0",
+    "@payloadcms/ui": "^3.48.0",
     "@radix-ui/react-accordion": "^1.2.8",
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dialog": "^1.1.11",
@@ -56,7 +56,8 @@
     "next": "15.3.0",
     "next-intl": "^4.1.0",
     "next-sitemap": "^4.2.3",
-    "payload": "^3.43.0",
+    "payload": "^3.48.0",
+    "posthog-js": "^1.257.0",
     "prism-react-renderer": "^2.3.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
