--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "react-hook-form": "7.45.4",
     "react-responsive": "^10.0.1",
     "sharp": "0.32.6",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7"
   },
