Update .gitignore to exclude video files while allowing specific formats and add next-video directory to public assets

--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,10 @@ ACTUAL.env.production
 
 #instructions
 instructions/
+
+# next-video
+videos/*
+!videos/*.json
+!videos/*.js
+!videos/*.ts
+public/_next-video
