--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "react-dom": "19.1.0",
     "react-hook-form": "7.45.4",
     "react-responsive": "^10.0.1",
+    "resend": "^6.4.2",
     "sharp": "0.32.6",
     "sonner": "^2.0.7",
     "tailwind-merge": "^2.3.0",
